--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -2,7 +2,7 @@
 es:
   forms:
     account_recovery_setup:
-      legend: NOT TRANSLATED YET
+      legend: Selecciona una opción de autenticación secundaria
     buttons:
       back: Atrás
       cancel: Sí, cancelar
@@ -35,7 +35,7 @@ es:
         a continuación.
       title: Ingrese su clave personal
     piv_cac_mfa:
-      submit: NOT TRANSLATED YET
+      submit: Presentar tarjeta PIV/CAC
     piv_cac_setup:
       certificate:
         bad_html: Elija un certificado diferente de su PIV/CAC o póngase en contacto
@@ -53,16 +53,17 @@ es:
           actualizado.
       choose_different_certificate: Elija un certificado diferente
       piv_cac:
-        already_associated_html: NOT TRANSLATED YET
+        already_associated_html: Elige un certificado de una PIV/CAC distinta o ponte
+          en contacto con el administrador para confirmar que tu PIV/CAC está al día.
       piv_cac_intro_html: Le pediremos que presente su tarjeta PIV/CAC <strong>cada
         vez que inicie sesión</strong> como parte de la autenticación de dos factores.<br><br>Después
         de hacer clic en "Agregar PIV/CAC", su navegador le solicitará su PIN PIV/CAC
         y le pedirá que seleccione un certificado.
       submit: Agregar tarjeta PIV/CAC
       token:
-        bad_html: NOT TRANSLATED YET
-        invalid_html: NOT TRANSLATED YET
-        missing_html: NOT TRANSLATED YET
+        bad_html: Elige un certificado distinto desde tu PIV/CAC.
+        invalid_html: Elige un certificado distinto desde tu PIV/CAC.
+        missing_html: Elige un método diferente como tu segundo factor.
     registration:
       labels:
         email: Email
