--- a/config/locales/titles/es.yml
+++ b/config/locales/titles/es.yml
@@ -3,7 +3,7 @@ es:
   titles:
     account: Cuenta
     account_locked: Cuenta bloqueada temporalmente
-    account_recovery_setup: NOT TRANSLATED YET
+    account_recovery_setup: Ajustes de recuperación de cuenta
     confirmations:
       new: Reenviar instrucciones de confirmación de su cuenta
       show: Elija una contraseña
@@ -30,12 +30,12 @@ es:
         unverified: Error de certificado PIV/CAC
       new: Use su tarjeta PIV/CAC para asegurar su cuenta
       piv_cac:
-        already_associated: NOT TRANSLATED YET
+        already_associated: La PIV/CAC se está usando en otra cuenta
       token:
-        bad: NOT TRANSLATED YET
-        invalid: NOT TRANSLATED YET
-        missing: NOT TRANSLATED YET
-    present_piv_cac: NOT TRANSLATED YET
+        bad: Error interno
+        invalid: Error en el certificado PIV/CAC
+        missing: Error interno
+    present_piv_cac: Presenta tu PIV/CAC
     present_webauthn: Presente su clave de seguridad de hardware
     reactivate_account: Reactive su cuenta
     registrations:
@@ -44,7 +44,7 @@ es:
     sign_up:
       completion_html: Tiene %{accent} con %{app}
       loa1: creó su cuenta
-      new_sp: NOT TRANSLATED YET
+      new_sp: Acabas de iniciar sesión por primera vez
       verified: Tiene verificó su identidad con %{app}
     totp_setup:
       new: Configure la autenticación de dos factores
