[LG-424] disable phone by deleting
**Why**:
We want users able to remove a phone from their account
if their threat model changes.

**How**:
We let users remove a configured phone if they have at
least one other MFA configured that isn't personal key.

--- a/config/locales/two_factor_authentication/es.yml
+++ b/config/locales/two_factor_authentication/es.yml
@@ -66,6 +66,10 @@ es:
     personal_key_header_text: Ingrese su clave personal
     personal_key_prompt: Puede usar esta clave personal una vez. Después de ingresarlo,
       se le dará una nueva clave.
+    phone:
+      delete:
+        success: NOT TRANSLATED YET
+        failure: NOT TRANSLATED YET
     phone_fallback:
       question: "¿No tiene acceso a su teléfono ahora mismo?"
     phone_sms_info_html: Le enviaremos un mensaje de texto con un código de seguridad
