--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -148,7 +148,7 @@ es:
         - no es un teléfono virtual (como Google Voice o Skype)
         - no es un número de teléfono prepago
         - un número de EE. UU.
-      reset_and_restart_verification: NOT TRANSLATED YET
+      clear_and_start_over: NOT TRANSLATED YET
       return_to_profile: NOT TRANSLATED YET
       return_to_sp_html: NOT TRANSLATED YET
       review:
