--- a/config/locales/two_factor_authentication/fr.yml
+++ b/config/locales/two_factor_authentication/fr.yml
@@ -67,8 +67,8 @@ fr:
       Une fois que vous l'entrez, vous recevrez une nouvelle clé.
     phone:
       delete:
-        success: NOT TRANSLATED YET
-        failure: NOT TRANSLATED YET
+        success: Votre téléphone a été supprimé.
+        failure: Impossible de supprimer votre téléphone.
     phone_fallback:
       question: Vous n'avez pas accès à votre téléphone maintenant?
     phone_sms_info_html: Nous vous enverrons un code de sécurité <strong>chaque fois
