--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -52,10 +52,13 @@ en:
         letter for a new code.
       weak_password: Your password is not strong enough. %{feedback}
     webauthn_setup:
+      already_registered: Security key already registered. Please try a different
+        security key.
       attestation_error: Sorry, but your security key doesn't appear to be a FIDO
         security key.  Please make sure your device is listed at https://fidoalliance.org/certification/fido-certified-products/
         and if you believe the error is ours, please contact us at hello@login.gov.
       delete_last: Sorry, you can not remove your last MFA option.
       general_error: There was an error adding your hardware security key. Please
         try again.
+      not_supported: Sorry, your browser does not support FIDO security keys.
       unique_name: That name is already taken. Please choose a different name.
