--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -39,7 +39,7 @@ es:
       must_have_us_country_code: Número de teléfono no válido. Asegúrate de introducir
         un número de teléfono con un código país de EE. UU.
       no_pending_profile: Ningún perfil está esperando verificación
-      otp_failed: Se produjo un error al enviar la contraseña de un uso.
+      otp_failed: Se produjo un error al enviar el código de seguridad.
       password_incorrect: La contraseña es incorrecta
       personal_key_incorrect: La clave personal es incorrecta
       phone_unsupported: Lo sentimos, no podemos enviar SMS en este momento. Pruebe
