--- a/config/locales/two_factor_authentication/fr.yml
+++ b/config/locales/two_factor_authentication/fr.yml
@@ -16,7 +16,7 @@ fr:
     invalid_otp: Ce code de sécurité est non valide. Vous pouvez essayer de l'entrer
       de nouveau ou demander un nouveau code de sécurité à utilisation unique.
     invalid_personal_key: Cette clé personnelle est non valide.
-    invalid_piv_cac: NOT TRANSLATED YET
+    invalid_piv_cac: Cette carte PIV/CAC n'est pas correcte.
     login_intro: Vous les avez configurés lorsque vous avez crée votre compte
     login_options:
       auth_app: Application d'authentification
@@ -49,11 +49,14 @@ fr:
     max_personal_key_login_attempts_reached: Pour votre sécurité, votre compte est
       temporairement verrouillé, car vous avez entré le code de sécurité à utilisation
       unique de façon erronée à de trop nombreuses reprises.
-    max_piv_cac_login_attempts_reached: NOT TRANSLATED YET
+    max_piv_cac_login_attempts_reached: Pour votre sécurité, votre compte a été temporairement
+      bloqué en raison de la saisie de mauvais identifiants PIV/CAC à de trop nombreuses
+      reprises.
     otp_delivery_preference:
       instruction: Vous pouvez changer cette sélection la prochaine fois que vous
         vous connectez.
-      phone_unsupported: NOT TRANSLATED YET
+      phone_unsupported: Nous ne sommes pas en mesure de passer des appels téléphoniques
+        aux personnes situées à %{location} pour le moment.
       sms: Message texte (SMS)
       title: Comment devrions-nous vous envoyer un code?
       voice: Appel téléphonique
@@ -72,7 +75,7 @@ fr:
     phone_voice_label: Numéro de téléphone
     piv_cac_fallback:
       question: Vous n'avez pas accès à votre carte PIV/CAC?
-    piv_cac_header_text: NOT TRANSLATED YET
+    piv_cac_header_text: Veuillez présenter votre carte PIV/CAC
     please_try_again_html: Veuillez essayer de nouveau dans <strong id=%{id}>%{time_remaining}</strong>.
     read_about_two_factor_authentication:
       link: lire sur l'authentification à deux facteurs
