--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -166,8 +166,8 @@ fr:
         - pas un téléphone virtuel (comme Google Voice ou Skype)
         - pas un numéro de téléphone prépayé
         - un numéro américain
-      clear_and_start_over: NOT TRANSLATED YET
       return_to_profile: "‹ Revenir à votre profil login.gov"
+      clear_and_start_over: Supprimer mes données et recommencer
       return_to_sp_html: Vous pouvez maintenant vous connecter à <strong>%{sp}</strong>.
       review:
         info_verified_html: Nous avons trouvé des données qui correspondent à votre
