--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -24,7 +24,7 @@ es:
     edit_info:
       email: Cambie su email
       password: Cambie su contraseña
-      phone: Ingrese su nuevo número de teléfono
+      phone: Administrar su número de teléfono
     lock_failure: Esto es lo que puedes hacer
     passwords:
       change: Cambie su contraseña
