--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -7,10 +7,10 @@ fr:
       back: Retour
       cancel: Oui, annuler
       continue: Continuer
-      delete: Supprimer
       disable: Désactiver
       edit: Modifier
       enable: Activer
+      manage: Administrer
       resend_confirmation: Envoyer les instructions de confirmation de nouveau
       send_security_code: Envoyer le code
       submit:
@@ -35,6 +35,9 @@ fr:
       instructions: Veuillez confirmer que vous avez une copie de votre clé personnelle
         en l'entrant ci-dessous.
       title: Entrez votre clé personnelle
+    phone:
+      buttons:
+        delete: Supprimer el teléfono
     piv_cac_mfa:
       submit: Veuillez présenter une carte PIV/CAC
     piv_cac_setup:
