--- a/config/locales/headings/fr.yml
+++ b/config/locales/headings/fr.yml
@@ -24,7 +24,7 @@ fr:
     edit_info:
       email: Changez votre courriel
       password: Changez votre mot de passe
-      phone: Entrez votre nouveau numéro de téléphone
+      phone: Administrer votre numéro de téléphone
     lock_failure: Voici ce que vous pouvez faire
     passwords:
       change: Changez votre mot de passe
