translation and analytics

--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -37,7 +37,7 @@ fr:
       title: Entrez votre clé personnelle
     phone:
       buttons:
-        delete: Supprimer el teléfono
+        delete: Supprimer le numéro de teléfono
     piv_cac_mfa:
       submit: Veuillez présenter une carte PIV/CAC
     piv_cac_setup:
