LG-683 Allow IdV restart on USPS confirmation (#2541)
**Why**: Because if a user enters an address they can't receive mail at,
or a user moves between requesting a code and returning to the IDP, they
currently have no option to go back and change their address. The commit
allows that by allowing the user to go back and restart IdV.

**How**: This commit creates a new action for cancelling IdV. Profile
deactivation is moved from the phone step into that new action. The "I
can't receive mail at this address" link is changed to reflect that
restarting is a destructive action. After the profile is deactivated,
the user is sent to the beginning of the IdV flow.

--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -149,6 +149,7 @@ en:
         - on a phone plan with your name on it
         - not a virtual phone (such as Google Voice or Skype)
         - a U.S. number
+      clear_and_start_over: Clear my information and start over
       return_to_profile: "‹ Return to your login.gov profile"
       return_to_sp_html: You can now log into <strong>%{sp}</strong>.
       review:
@@ -166,7 +167,6 @@ en:
           data to make sure no one else can access it.
         success: Next, we'll need a phone number.
       usps:
-        bad_address: I can't get mail at this address
         byline: We will mail a letter with a confirmation code to your verified address
           on file.
         resend: Send me another letter.
