--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -154,6 +154,7 @@ es:
         - no es un teléfono virtual (como Google Voice o Skype)
         - no es un número de teléfono prepago
         - un número de EE. UU.
+      clear_and_start_over: Borrar mi información y empezar de nuevo
       return_to_profile: "‹ Volver a tu perfil de login.gov"
       return_to_sp_html: Ahora puedes iniciar sesión en <strong>%{sp}</strong>.
       review:
@@ -173,7 +174,6 @@ es:
           sus datos para asegurarse de que nadie más pueda acceder a ellos.
         success: A continuación, necesitaremos un número de teléfono.
       usps:
-        bad_address: No puedo recibir correo en esta dirección
         byline: Le enviaremos una carta con un código de confirmación a su dirección
           verificada en el archivo.
         resend: Envíeme otra carta.
