--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -169,7 +169,7 @@ en:
       usps:
         byline: We will mail a letter with a confirmation code to your verified address
           on file.
-        resend: Send me another letter.
+        resend: Send me another letter
         success: It should arrive in 5 to 10 business days.
     review:
       dob: Date of birth
