--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -190,7 +190,7 @@ fr:
       usps:
         byline: Nous posterons une lettre à l'adresse vérifiée dans nos dossiers.
           Celle-ci contient un code de confirmation.
-        resend: Envoyez-moi une autre lettre.
+        resend: Envoyez-moi une autre lettre
         success: Elle devrait arriver dans 5 à 10 jours ouvrables.
     review:
       dob: Date de naissance
