LG-726 Confirm before removing security key
**Why**: So the user can confirm they want to remove their security key or choose to cancel.

**How**: If their security key is their last 2FA option disable the delete link.  If they have another 2FA option allow them to delete by first showing a modal.  This modal will allow them to proceed or cancel and return to the account page.

--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -88,6 +88,11 @@ en:
       name: Confirmation code
       submit: Confirm account
       title: Confirm your account
+    webauthn_delete:
+      bullet_1: You won't be able to use your security key to securely access your
+        information using login.gov.
+      caution: If you delete your security key
+      confirm: Are you sure you want to delete your security key?
     webauthn_setup:
       continue: Continue
       instructions_text: Press the button on your security key to register it with
