[LG-424] disable phone by deleting (#2578)
* [LG-424] disable phone by deleting

**Why**:
We want users able to remove a phone from their account
if their threat model changes.

**How**:
We let users remove a configured phone if they have at
least one other MFA configured that isn't personal key.

--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -10,6 +10,7 @@ en:
       disable: Disable
       edit: Edit
       enable: Enable
+      manage: Manage
       resend_confirmation: Resend confirmation instructions
       send_security_code: Send code
       submit:
@@ -34,6 +35,9 @@ en:
       instructions: Please confirm you have a copy of your personal key by entering
         it below.
       title: Enter your personal key
+    phone:
+      buttons:
+        delete: Remove Phone
     piv_cac_mfa:
       submit: Present PIV/CAC card
     piv_cac_setup:
