--- a/config/locales/notices/en.yml
+++ b/config/locales/notices/en.yml
@@ -45,4 +45,4 @@ en:
     use_diff_email:
       link: use a different email address
       text_html: Or, %{link}
-    webauthn_deleted: You deleted a hardware security key.
+    webauthn_deleted: You removed a security key.
