--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -28,7 +28,7 @@ en:
         success: Your account has been verified.
       webauthn: Hardware security key
       webauthn_add: "+ Add hardware security key"
-      webauthn_delete: Remove
+      webauthn_delete: Yes, remove key
     items:
       delete_your_account: Delete your account
       personal_key: Personal key
