--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -28,7 +28,7 @@ es:
         success: Su cuenta ha sido verificada.
       webauthn: Clave de seguridad de hardware
       webauthn_add: "+ Agregar clave de seguridad de hardware"
-      webauthn_delete: Retirar
+      webauthn_delete: Si quitar la llave
     items:
       delete_your_account: Eliminar su cuenta
       personal_key: Clave personal
