--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -90,9 +90,8 @@ es:
       submit: Confirmar cuenta
       title: Confirme su cuenta
     webauthn_delete:
-      bullet_1: No podrá usar su clave de seguridad para acceder de forma segura a
-        su información utilizando login.gov.
-      caution: Si borras tu clave de seguridad
+      caution: Si elimina su clave de seguridad, no podrá usarla para acceder a su
+        cuenta login.gov.
       confirm: "¿Estás seguro de que quieres eliminar tu clave de seguridad?"
     webauthn_setup:
       continue: Continuar
