LG-768 Create event for personal key as 2FA
**Why**: To make it easier to query if any particular users have used
their personal key to sign in, and to add an event to the user's account
page for visibility.

--- a/config/locales/event_types/en.yml
+++ b/config/locales/event_types/en.yml
@@ -11,6 +11,7 @@ en:
     email_changed: Email address changed
     new_personal_key: Personal key changed
     password_changed: Password changed
+    personal_key_used: Personal key used to sign in
     phone_changed: Phone number changed
     phone_confirmed: Phone confirmed
     piv_cac_disabled: PIV/CAC card unassociated
