LG-748 Create events for webauthn key management
**Why**: We want the user to see in their history when hardware security
keys are added and removed.

Also, I updated the analytics attributes to show the user's current
count for each MFA type so we can see which MFA configurations they
ended up with.

--- a/config/locales/event_types/en.yml
+++ b/config/locales/event_types/en.yml
@@ -17,3 +17,5 @@ en:
     piv_cac_disabled: PIV/CAC card unassociated
     piv_cac_enabled: PIV/CAC card associated
     usps_mail_sent: Letter sent
+    webauthn_key_added: Hardware security key added
+    webauthn_key_removed: Hardware security key removed
