--- a/config/locales/event_types/fr.yml
+++ b/config/locales/event_types/fr.yml
@@ -17,3 +17,5 @@ fr:
     piv_cac_disabled: Carte PIV/CAC non associée
     piv_cac_enabled: Carte PIV/CAC associée
     usps_mail_sent: Lettre envoyée
+    webauthn_key_added: Clé de sécurité ajoutée
+    webauthn_key_removed: Clé de sécurité retirée
