--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -28,9 +28,10 @@ fr:
         instructions: Votre compte requiert la vérification d'un code secret.
         reactivate_button: Entrez le code que vous avez reçu par la poste
         success: Votre compte a été vérifié.
-      webauthn: Clé de sécurité physique
-      webauthn_add: "+ Ajouter une clé de sécurité physique"
-      webauthn_delete: Oui, retirer la clé
+      webauthn: Clé de sécurité
+      webauthn_add: "+ Ajouter une clé de sécurité"
+      webauthn_confirm_delete: Oui, retirer la clé
+      webauthn_delete: Enlever la clé
     items:
       delete_your_account: Supprimer votre compte
       personal_key: Clé personnelle
