--- a/config/locales/two_factor_authentication/es.yml
+++ b/config/locales/two_factor_authentication/es.yml
@@ -101,8 +101,8 @@ es:
       sms_info: Obtenga su código de seguridad a través de mensajes de texto / SMS
       voice: Llamada telefónica
       voice_info: Obtenga su código de seguridad a través de una llamada telefónica
-      webauthn: Clave de seguridad de hardware
+      webauthn: Clave de seguridad
       webauthn_info: Use una clave de seguridad para proteger su cuenta
     webauthn_fallback:
-      question: "¿No tienes tu clave de seguridad de hardware disponible?"
+      question: "¿No tienes tu clave de seguridad disponible?"
     webauthn_header_text: Presenta tu clave de seguridad
