--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -88,6 +88,10 @@ en:
       name: Confirmation code
       submit: Confirm account
       title: Confirm your account
+    webauthn_delete:
+      caution: If you remove your security key you won't be able to use it to access
+        your login.gov account.
+      confirm: Are you sure you want to remove your security key?
     webauthn_setup:
       continue: Continue
       instructions_text: Press the button on your security key to register it with
