--- a/config/locales/instructions/fr.yml
+++ b/config/locales/instructions/fr.yml
@@ -41,8 +41,7 @@ fr:
         confirm_code_html: Vous voulez que nous vous appelions de nouveau? %{resend_code_link}
         number_message: Nous venons de vous appeler à %{number}.
       webauthn:
-        confirm_webauthn_html: Présentez la clé de sécurité physique associée à votre
-          compte.
+        confirm_webauthn_html: Présentez la clé de sécurité associée à votre compte.
       wrong_number_html: Vous avez entré un mauvais numéro de téléphone? %{link}
     password:
       forgot: Vous ne connaissez pas votre mot de passe? Réinitialisez-le après avoir
