--- a/config/locales/two_factor_authentication/fr.yml
+++ b/config/locales/two_factor_authentication/fr.yml
@@ -67,8 +67,8 @@ fr:
       Une fois que vous l'entrez, vous recevrez une nouvelle clé.
     phone:
       delete:
-        success: Votre numéro de téléphone a été supprimé.
         failure: Impossible de supprimer votre numéro de téléphone.
+        success: Votre numéro de téléphone a été supprimé.
     phone_fallback:
       question: Vous n'avez pas accès à votre téléphone maintenant?
     phone_sms_info_html: Nous vous enverrons un code de sécurité <strong>chaque fois
@@ -100,8 +100,8 @@ fr:
       sms_info: Obtenez votre code de sécurité par SMS
       voice: Appel téléphonique
       voice_info: Obtenez votre code de sécurité par appel téléphonique
-      webauthn: Clé de sécurité physique
+      webauthn: Clé de sécurité
       webauthn_info: Utilisez une clé de sécurité pour sécuriser votre compte
     webauthn_fallback:
-      question: Votre clé de sécurité physique n'est pas disponible?
+      question: Votre clé de sécurité n'est-elle pas disponible?
     webauthn_header_text: Présentez votre clé de sécurité
